olingo: fix some formatting issues